--- a/requirements.txt
+++ b/requirements.txt
@@ -100,8 +100,8 @@ tenacity==9.0.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
-tensorflow-intel==2.16.1
-tensorflow-io-gcs-filesystem==0.31.0
+#tensorflow-intel==2.16.1
+#tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 toml==0.10.2
 tornado==6.4
