--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,8 @@
-﻿absl-py==2.1.0
-aiohttp==3.9.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-altair==5.5.0
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==23.2.0
-biopython==1.84
-blinker==1.9.0
-cachetools==5.5.1
-caer==2.0.8
-certifi==2024.6.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.8
-colorama==0.4.6
-comm==0.2.1
-contourpy==1.2.0
-cvlib==0.2.7
-cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
-executing==2.0.1
-flatbuffers==24.3.25
-fonttools==4.49.0
-frozenlist==1.4.1
-gast==0.5.4
-gitdb==4.0.12
-GitPython==3.1.44
-google-pasta==0.2.0
-grpcio==1.64.1
-h5py==3.11.0
-idna==3.7
-imageio==2.34.1
-imutils==0.5.4
-ipykernel==6.29.2
-ipython==8.21.0
-jedi==0.19.1
-Jinja2==3.1.5
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-keras==3.3.3
-kiwisolver==1.4.5
-libclang==18.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-ml-dtypes==0.3.2
-multidict==6.0.5
-mypy==1.10.0
-mypy-extensions==1.0.0
-namex==0.0.8
-narwhals==1.25.0
-nest-asyncio==1.6.0
-numpy==1.26.4
-opencv-contrib-python==4.10.0.82
-opencv-python==4.10.0.82
-opt-einsum==3.3.0
-optree==0.11.0
-packaging==23.2
-pandas==2.2.3
-parso==0.8.3
-pillow==10.2.0
-platformdirs==4.2.0
-progressbar==2.5
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow==19.0.0
-PyAudio==0.2.14
-pycparser==2.21
-pydeck==0.9.1
-Pygments==2.17.2
-PyJWT==2.8.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2024.2
-#pywin32==306
-pyzmq==25.1.2
-referencing==0.36.2
-requests==2.32.3
-rich==13.7.1
-rpds-py==0.22.3
-scipy==1.12.0
-seaborn==0.13.2
-six==1.16.0
-smmap==5.0.2
-soundfile==0.12.1
-SpeechRecognition==3.10.1
-stack-data==0.6.3
-streamlit==1.41.1
-tenacity==9.0.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-#tensorflow-intel==2.16.1
-#tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-toml==0.10.2
-tornado==6.4
-traitlets==5.14.1
-twilio==9.2.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.2
-watchdog==6.0.0
-wcwidth==0.2.13
-Werkzeug==3.0.3
-wrapt==1.16.0
-yarl==1.9.4
+numpy
+pandas
+tensorflow
+opencv-python-headless
+Pillow
+joblib
+matplotlib
+seaborn
